--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -1,17 +1,26 @@
+
 .bg {
-  background: url('../Smilesfinal.jpeg') no-repeat center center;
-  position: fixed;
-  width: 2000px;
-  height: 600px; /*same height as jumbotron */
+  background: url('../Smiles.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  height: 70%;
+/*  width: 100%;
+  height: 350px; /*same height as jumbotron*/
   top:0;
   left:0;
-  z-index: -1;
+  z-index: -1; */
 }
 
-.jumbotron {
-  margin-bottom: 0px;
-  height: 600px;
-  color: white;
-  text-shadow: black 0.3em 0.3em 0.3em;
-  background:transparent;
+.herotext {
+text-align: center;
+position: relative;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+}
+
+#mainheading {
+  font-family: "Times New Roman";
 }
