--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -5,7 +5,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  height: 70%;
+  height: 92%;
 /*  width: 100%;
   height: 350px; /*same height as jumbotron*/
   top:0;
@@ -23,4 +23,6 @@ transform: translate(-50%, -50%);
 
 #mainheading {
   font-family: "Times New Roman";
+  font-style: "oblique";
+  font-size: "100%"
 }
