--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -16,13 +16,36 @@
 .herotext {
 text-align: center;
 position: relative;
-top: 50%;
+font-size: 150pt;
+font-family:inherit;
+top: 60%;
 left: 50%;
 transform: translate(-50%, -50%);
 }
 
-#mainheading {
+/*#mainheading {
   font-family: "Times New Roman";
   font-style: "oblique";
   font-size: "100%"
+}*/
+.what {
+  background: url('../run.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  height: 92%;
+/*  width: 100%;
+  height: 350px; /*same height as jumbotron*/
+  top:0;
+  left:0;
+  z-index: -1; */
+}
+
+#sub-heading {
+    margin-top: 100px;
+}
+
+.row{
+text-align:center;
 }
