--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -46,11 +46,12 @@ transform: translate(-50%, -50%);
     margin-top: 100px;
 }
 
-.row{
-text-align:center;
-}
-
 .thumbnail{
     border-style: none;
 
+}
+
+.navbar {
+    background-color: white;
+    border-style: none;
 }
